# lightmediascanner

./: .gitignore  AUTHORS  ChangeLog  Doxyfile  Makefile.am  NEWS  README  TODO  autogen.sh  configure.ac  lightmediascanner.pc.in  lightmediascanner.spec.in  org.lightmediascanner.service.in
m4/: Makefile.am  ac-plugins.m4
src/lib/: Makefile.am  lightmediascanner.c  lightmediascanner.h  lightmediascanner_charset_conv.c  lightmediascanner_charset_conv.h  lightmediascanner_check.c  lightmediascanner_db.h  lightmediascanner_db_audio.c  lightmediascanner_db_common.c  lightmediascanner_db_image.c  lightmediascanner_db_playlist.c  lightmediascanner_db_private.h  lightmediascanner_db_video.c  lightmediascanner_dlna.c  lightmediascanner_dlna.h  lightmediascanner_dlna_rules.c  lightmediascanner_plugin.h  lightmediascanner_private.h  lightmediascanner_process.c  lightmediascanner_utils.c  lightmediascanner_utils.h
src/lib/shared/: util.c  util.h
src/plugins/: Makefile.am
src/plugins/aac/: Makefile.am  aac.c
src/plugins/asf/: Makefile.am  asf.c
src/plugins/audio-dummy/: Makefile.am  audio-dummy.c
src/plugins/dummy/: Makefile.am  dummy.c
src/plugins/flac/: Makefile.am  flac.c
src/plugins/generic/: generic.c
src/plugins/id3/: .gitignore  Makefile.am  id3.c  id3v1_genres.def  id3v1_genres_gen.awk
src/plugins/id3lib/: Makefile.am  id3lib.cpp
src/plugins/jpeg/: Makefile.am  jpeg.c
src/plugins/m3u/: Makefile.am  m3u.c
src/plugins/mp4/: Makefile.am  mp4.c
src/plugins/ogg/: Makefile.am  lms_ogg_private.h  lms_ogg_tremor.c  lms_ogg_vorbis.c  ogg.c
src/plugins/pls/: Makefile.am  pls.c
src/plugins/png/: Makefile.am  png.c
src/plugins/rm/: Makefile.am  rm.c
src/plugins/shared/: util.h
src/plugins/video-dummy/: Makefile.am  video-dummy.c
src/plugins/wave/: wave.c
