MAINTAINERCLEANFILES = Makefile.in

SUBDIRS =

if USE_MODULE_DUMMY
SUBDIRS += dummy
endif

if USE_MODULE_JPEG
SUBDIRS += jpeg
endif

if USE_MODULE_ID3LIB
SUBDIRS += id3lib
endif

if USE_MODULE_VIDEO_DUMMY
SUBDIRS += video-dummy
endif

if USE_MODULE_M3U
SUBDIRS += m3u
endif

if USE_MODULE_PLS
SUBDIRS += pls
endif


DIST_SUBDIRS = \
	dummy \
	jpeg \
	id3lib \
	video-dummy \
	m3u \
	pls
