MAINTAINERCLEANFILES = Makefile.in

SUBDIRS =

if USE_MODULE_DUMMY
SUBDIRS += dummy
endif

if USE_MODULE_JPEG
SUBDIRS += jpeg
endif

if USE_MODULE_PNG
SUBDIRS += png
endif

if USE_MODULE_ID3LIB
SUBDIRS += id3lib
endif

if USE_MODULE_VIDEO_DUMMY
SUBDIRS += video-dummy
endif

if USE_MODULE_AUDIO_DUMMY
SUBDIRS += audio-dummy
endif

if USE_MODULE_M3U
SUBDIRS += m3u
endif

if USE_MODULE_PLS
SUBDIRS += pls
endif

if USE_MODULE_OGG
SUBDIRS += ogg
endif

if USE_MODULE_ASF
SUBDIRS += asf
endif

DIST_SUBDIRS = \
	dummy \
	jpeg \
	png \
	id3lib \
	video-dummy \
	audio-dummy \
	m3u \
	ogg \
	pls \
	asf
